TASC - 2013 Op - 14 - OAS Scoring - part 2 & TASC - 2013 - Derived Scoring Story delivery with toggle invalidation for TASC Product